# plugin

./: CMakeLists.txt  main.qbs  plugin.qbs
doc/api/: CMakeLists.txt  Doxyfile  Doxyfile.in  api.qbs
doc/api/pages/: main.markdown
doc/doxygen/: Doxyfile
src/: CMakeLists.txt  iplugin.cpp  iplugin.h  pluginmanager.cpp  pluginmanager.h
tests/auto/: CMakeLists.txt  plugins.cmake
tests/auto/tst_plugin1/: CMakeLists.txt  imainwindow.h  tst_plugin1global.h
tests/auto/tst_plugin2/: CMakeLists.txt  tst_plugin2global.h
tests/auto/tst_plugin3/: CMakeLists.txt  tst_plugin3global.h
tests/auto/tst_plugin4/: CMakeLists.txt  tst_plugin4global.h  version.h
tests/auto/tst_pluginmanager/: CMakeLists.txt  tst_pluginmanager.cpp
